--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
   </licenses>
   <properties>
     <jenkins.version>2.7.3</jenkins.version>
+    <java.level>7</java.level>
   </properties>
   <repositories>
     <repository>
