--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -3,5 +3,6 @@ update_configs:
   - package_manager: java:maven
     directory: /
     update_schedule: weekly
+    dependency_type: development
     default_reviewers:
       - jglick
