--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -32,6 +32,6 @@ RUN cd /tmp/repo && \
 
 # TODO without this JENKINS-24752 workaround, it takes too long to provision.
 # (Do not add hudson.model.LoadStatistics.decay=0.1; in that case we overprovision slaves which never get used, and OnceRetentionStrategy.check disconnects them after an idle timeout.)
-ENV JAVA_OPTS -Dhudson.model.LoadStatistics.clock=1000 -Dhudson.DNSMultiCast.disabled=true -Dhudson.Main.development=true
+ENV JAVA_OPTS -Dhudson.model.LoadStatistics.clock=1000 -Dhudson.Main.development=true
 
 ADD JENKINS_HOME /usr/share/jenkins/ref
