--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     </license>
   </licenses>
   <properties>
-    <jenkins.version>2.249.1</jenkins.version>
+    <jenkins.version>2.289.1</jenkins.version>
     <java.level>8</java.level>
   </properties>
   <repositories>
@@ -44,8 +44,8 @@
     <dependencies>
       <dependency>
         <groupId>io.jenkins.tools.bom</groupId>
-        <artifactId>bom-2.249.x</artifactId>
-        <version>984.vb5eaac999a7e</version>
+        <artifactId>bom-2.289.x</artifactId>
+        <version>1145.va_a_c3b_33935d7</version>
         <scope>import</scope>
         <type>pom</type>
       </dependency>
@@ -55,7 +55,7 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>parameterized-trigger</artifactId>
-      <version>2.33</version>
+      <version>2.43</version>
     </dependency>
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
@@ -129,7 +129,6 @@
     <dependency>
       <groupId>org.6wind.jenkins</groupId>
       <artifactId>lockable-resources</artifactId>
-      <version>2.10</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
