--- a/demo/Makefile
+++ b/demo/Makefile
@@ -1,5 +1,5 @@
 IMAGE=parallel-test-executor-demo
-DOCKER_RUN=docker run --rm -p 127.0.0.1:8080:8080 -v m2repo:/m2repo -v /var/run/docker.sock:/var/run/docker.sock --group-add=$(shell stat -c %g /var/run/docker.sock) -ti
+DOCKER_RUN=docker run --rm -p 127.0.0.1:8080:8080 -v m2repo:/m2repo --group-add=$(shell stat -c %g /var/run/docker.sock) -ti
 
 validate:
 	mvn -Dtest=InjectedTest clean test
@@ -10,7 +10,7 @@ copy-plugins:
 	     pom.xml -nt target/test-classes/test-dependencies/index -o \
 	     ../target/parallel-test-executor.hpi -nt target/test-classes/test-dependencies/parallel-test-executor.hpi ]; then \
 	    mvn clean validate hpi:resolve-test-dependencies; fi
-	# TODO would be more efficient to move Dockerfile and all it references into a subdirectory, or use .dockerignore
+	@# TODO would be more efficient to move Dockerfile and all it references into a subdirectory, or use .dockerignore
 	rm -rf plugins
 	mkdir plugins
 	cp -v target/test-classes/test-dependencies/*.hpi plugins
